# communication_dhcp

./: BUILD.gn  OAT.xml  README.en.md  README.md  bundle.json  dhcp.gni  dhcp_lite.gni
frameworks/native/: BUILD.gn  libdhcp_sdk.map
frameworks/native/c_adapter/inc/: dhcp_c_utils.h
frameworks/native/c_adapter/src/: dhcp_c_service.cpp  dhcp_c_utils.cpp
frameworks/native/include/: dhcp_errcode.h  dhcp_event.h  dhcp_ipc_lite_adapter.h  dhcp_manager_service_ipc_interface_code.h  dhcp_sa_manager.h  dhcp_sdk_define.h
frameworks/native/interfaces/: i_dhcp_client.h  i_dhcp_client_callback.h  i_dhcp_server.h  i_dhcp_server_callback.h
frameworks/native/src/: dhcp_client.cpp  dhcp_client_callback_stub.cpp  dhcp_client_callback_stub.h  dhcp_client_callback_stub_lite.cpp  dhcp_client_callback_stub_lite.h  dhcp_client_impl.cpp  dhcp_client_impl.h  dhcp_client_proxy.cpp  dhcp_client_proxy.h  dhcp_client_proxy_lite.cpp  dhcp_event.cpp  dhcp_sa_manager.cpp  dhcp_server.cpp  dhcp_server_callback_stub.cpp  dhcp_server_callback_stub.h  dhcp_server_callback_stub_lite.cpp  dhcp_server_impl.cpp  dhcp_server_impl.h  dhcp_server_proxy.cpp  dhcp_server_proxy.h  dhcp_server_proxy_lite.cpp
services/dhcp_client/: BUILD.gn  libdhcp_client.map
services/dhcp_client/include/: dhcp_arp_checker.h  dhcp_client.h  dhcp_client_callback_proxy.h  dhcp_client_death_recipient.h  dhcp_client_def.h  dhcp_client_service_impl.h  dhcp_client_state_machine.h  dhcp_client_stub.h  dhcp_client_stub_lite.h  dhcp_define.h  dhcp_function.h  dhcp_ipv6.h  dhcp_ipv6_client.h  dhcp_ipv6_define.h  dhcp_ipv6_dns_repository.h  dhcp_ipv6_event.h  dhcp_ipv6_info.h  dhcp_ipv6_kernel.h  dhcp_options.h  dhcp_result.h  dhcp_result_store_manager.h  dhcp_socket.h  dhcp_thread.h  dhcp_v6_callback_impl.h  dhcp_v6_feature_switch.h
services/dhcp_client/src/: dhcp_api.cpp  dhcp_arp_checker.cpp  dhcp_client.c  dhcp_client_callback_proxy.cpp  dhcp_client_callback_proxy_lite.cpp  dhcp_client_death_recipient.cpp  dhcp_client_feature_lite.cpp  dhcp_client_service_impl.cpp  dhcp_client_state_machine.cpp  dhcp_client_stub.cpp  dhcp_client_stub_lite.cpp  dhcp_function.c  dhcp_function.cpp  dhcp_ipv4.c  dhcp_ipv6.c  dhcp_ipv6_client.cpp  dhcp_ipv6_dns_repository.cpp  dhcp_ipv6_event.c  dhcp_ipv6_event.cpp  dhcp_ipv6_info.cpp  dhcp_ipv6_kernel.c  dhcp_main.c  dhcp_options.c  dhcp_options.cpp  dhcp_result.cpp  dhcp_result_store_manager.cpp  dhcp_socket.c  dhcp_socket.cpp  dhcp_start_client_sa.cpp  dhcp_thread.cpp  dhcp_v6_callback_impl.cpp  dhcp_v6_feature_switch.cpp
services/dhcp_server/: BUILD.gn  libdhcp_server.map
services/dhcp_server/include/: address_utils.h  common_util.h  dhcp_address_pool.h  dhcp_argument.h  dhcp_binding.h  dhcp_config.h  dhcp_dhcpd.h  dhcp_function.h  dhcp_logger.h  dhcp_message.h  dhcp_s_define.h  dhcp_s_server.h  dhcp_server.h  dhcp_server_callback_proxy.h  dhcp_server_death_recipient.h  dhcp_server_ipv4.h  dhcp_server_service_impl.h  dhcp_server_stub.h  dhcp_server_stub_lite.h
services/dhcp_server/src/: address_utils.cpp  common_util.c  common_util.cpp  dhcp_address_pool.c  dhcp_address_pool.cpp  dhcp_argument.c  dhcp_argument.cpp  dhcp_binding.cpp  dhcp_config.c  dhcp_config.cpp  dhcp_dhcpd.cpp  dhcp_function.cpp  dhcp_option.cpp  dhcp_s_server.cpp  dhcp_server.c  dhcp_server_callback_proxy.cpp  dhcp_server_callback_proxy_lite.cpp  dhcp_server_death_recipient.cpp  dhcp_server_feature_lite.cpp  dhcp_server_service_impl.cpp  dhcp_server_stub.cpp  dhcp_server_stub_lite.cpp  dhcp_start_server_sa.cpp  hash_table.c  hash_table.cpp
services/utils/: BUILD.gn  libdhcp_util.map
services/utils/include/: dhcp_arp_checker.h  dhcp_common_utils.h  dhcp_permission_utils.h  dhcp_sa_manager.h  dhcp_system_timer.h  dhcp_thread.h
services/utils/src/: dhcp_arp_checker.cpp  dhcp_common_utils.cpp  dhcp_permission_utils.cpp  dhcp_sa_manager.cpp  dhcp_system_timer.cpp  dhcp_thread.cpp
test/fuzztest/clientstub_fuzzer/: BUILD.gn  clientstub_fuzzer.cpp  clientstub_fuzzer.h
test/fuzztest/dhcp_event_fuzzer/: BUILD.gn  dhcp_event_fuzzer.cpp  dhcp_event_fuzzer.h
test/fuzztest/dhcpaddresspool_fuzzer/: BUILD.gn  dhcpaddresspool_fuzzer.cpp  dhcpaddresspool_fuzzer.h
test/fuzztest/dhcpclientfun_fuzzer/: BUILD.gn  dhcpclientfun_fuzzer.cpp  dhcpclientfun_fuzzer.h
test/fuzztest/dhcpdhcpd_fuzzer/: BUILD.gn  dhcpdhcpd_fuzzer.cpp  dhcpdhcpd_fuzzer.dict  dhcpdhcpd_fuzzer.h
test/fuzztest/dhcpdhcpd_fuzzer/corpus/: init
test/fuzztest/dhcpfunction2_fuzzer/: BUILD.gn  dhcpfunction2_fuzzer.cpp  dhcpfunction2_fuzzer.h
test/fuzztest/dhcpserver_fuzzer/: BUILD.gn  dhcpserver_fuzzer.cpp  dhcpserver_fuzzer.h
test/fuzztest/dhcpservercbkstub_fuzzer/: BUILD.gn  dhcpservercbkstub_fuzzer.cpp  dhcpservercbkstub_fuzzer.h
test/services/dhcp_server/unittest/: BUILD.gn  address_utils_test.cpp  common_util_test.cpp  dhcp_address_pool_test.cpp  dhcp_argument_test.cpp  dhcp_binding_test.cpp  dhcp_config_test.cpp  dhcp_dhcpd_test.cpp  dhcp_function_test.cpp  dhcp_message_sim.cpp  dhcp_message_sim.h  dhcp_option_test.cpp  dhcp_s_server_test.cpp  dhcp_server_service_impl_test.cpp  dhcp_server_stub_test.cpp  dhcp_server_test.cpp  hash_table_test.cpp  system_func_mock.cpp  system_func_mock.h
test/unittest/native/: BUILD.gn  dhcp_client_proxy_test.cpp
test/unittest/services/dhcp_client/: BUILD.gn  dhcp_arp_checker_test.cpp  dhcp_client_service_impl_test.cpp  dhcp_client_state_machine_test.cpp  dhcp_client_test.cpp  dhcp_dns_repository_test.cpp  dhcp_function_test.cpp  dhcp_ipv6_client_test.cpp  dhcp_ipv6_info_test.cpp  dhcp_options_test.cpp  dhcp_result_store_manager_test.cpp  dhcp_result_test.cpp  dhcp_socket_test.cpp  dhcp_thread_test.cpp  dhcp_v6_callback_impl_test.cpp  dhcp_v6_client_test.cpp  dhcp_v6_message_test.cpp  dhcp_v6_socket_test.cpp  dhcp_v6_statemachine_test.cpp  mock_custom_func.cpp  mock_custom_func.h  mock_system_func.cpp  mock_system_func.h
test/unittest/services/utils/: BUILD.gn  dhcp_arp_checker_async_test.cpp  dhcp_arp_checker_test.cpp  dhcp_common_utils_test.cpp  dhcp_permission_utils_test.cpp  dhcp_system_timer_test.cpp  (+1 more)
(+121 files in other folders)
