# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/communication/dhcp/dhcp.gni")

##############################fuzztest##########################################
ohos_fuzztest("ClientStubFuzzTest") {
  module_out_path = dhcp_fuzz_output_path
  fuzz_config_file = "$DHCP_ROOT_DIR/test/fuzztest/clientstub_fuzzer"

  include_dirs = [
    "$DHCP_ROOT_DIR/interfaces/inner_api",
    "$DHCP_ROOT_DIR/frameworks/native/include",
    "$DHCP_ROOT_DIR/frameworks/native/src",
    "$DHCP_ROOT_DIR/frameworks/native/interfaces",
    "$DHCP_ROOT_DIR/services/dhcp_client/include",
    "$DHCP_ROOT_DIR/test/fuzztest/fuzz_common_func",
    "$DHCP_ROOT_DIR/services",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "clientstub_fuzzer.cpp" ]

  deps = [
    "$DHCP_ROOT_DIR/frameworks/native:dhcp_sdk",
    "$DHCP_ROOT_DIR/services/dhcp_client:dhcp_client",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_single",
    "netmanager_base:net_native_manager_if",
    "netmanager_base:netsys_controller",
  ]

  defines = [ "DTFUZZ_TEST" ]

  part_name = "dhcp"
  subsystem_name = "communication"
}
