# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/communication/dhcp/dhcp.gni")

##############################fuzztest##########################################
ohos_fuzztest("DhcpEventFuzzTest") {
  module_out_path = dhcp_fuzz_output_path
  fuzz_config_file =
      "//foundation/communication/dhcp/test/fuzztest/dhcp_event_fuzzer"

  include_dirs = [
    "//foundation/communication/dhcp/frameworks/native/include",
    "//foundation/communication/dhcp/interfaces/inner_api",
    "//foundation/communication/dhcp/interfaces/inner_api/include",
    "//foundation/communication/dhcp/interfaces/kits/c",
    "//foundation/communication/dhcp/services/utils/include",
    "$DHCP_ROOT_DIR/services",
    "$DHCP_ROOT_DIR/interfaces/",
    "$DHCP_ROOT_DIR/interfaces/inner_api",
    "$DHCP_ROOT_DIR/frameworks/native/include",
    "$DHCP_ROOT_DIR/frameworks/native/src",
    "$DHCP_ROOT_DIR/frameworks/native/interfaces",
    "$DHCP_ROOT_DIR/test/fuzztest/fuzz_common_func",
    "$DHCP_ROOT_DIR/services",
    "$DHCP_ROOT_DIR/services/utils/include",
    "$DHCP_ROOT_DIR/frameworks/native/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  sources = [
    "//foundation/communication/dhcp/frameworks/native/src/dhcp_event.cpp",
    "dhcp_event_fuzzer.cpp",
  ]

  deps = [ "//foundation/communication/dhcp/services/utils:dhcp_utils" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "DTFUZZ_TEST",
    "private=public",
  ]

  part_name = "dhcp"
  subsystem_name = "communication"
}
